kube/frontend-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399, 404"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - __DOMAIN_NAME__ 
    secretName: globalbank-tls-secret
  rules:
  - host: __DOMAIN_NAME__ 
    http:
      paths:
      
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /api/account
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 80

      - path: /api/transaction
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 80

      - path: /api/notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
